// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
  style={Object {}}
>
  Custom Product
</span>
`;

exports[`ProductTitle debe de mostrar el componente correctamente con el titulo por defecto 1`] = `
<div
  className="productCard undefined"
  style={Object {}}
>
  <span
    className="productDescription undefined"
    style={Object {}}
  >
    Coffee Mug - Sin Imagen
  </span>
</div>
`;
